# Legendary_method

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  go  plan.md  pyproject.toml  requirements.txt
data/: per_stock_weights.json
deploy/: dry-run-guide.md  install.sh  jongbae.service  logrotate.conf
docs/: buy-score-revision-proposal.md  dashboard-pwa.md  data-infra.md  eod-strategy.md  jongbae-strategy.md  monitoring-guide.md  plan.md  r14-revision-proposal.md  report-spec.md  scalping-method-taxonomy.md  scalping-redesign-2026-05-27.md  scalping-strategy.md  scalping-weakness-analysis-2026-05-29.md  trading-journal.md  trading-method-separation-discussion.md
scripts/: _migrate_imports_v2.py  _migrate_naming_v2.py  analyze_legend_picks.py  analyze_setup_labels.py  analyze_strong_tightening.py  analyze_system_entries.py  backtest_buy_score.py  backtest_eod_floor.py  backtest_factor_edge.py  backtest_factor_edge2.py  backtest_method_weights.py  backtest_r4v2.py  backtest_recent_kelly.py  backtest_top3_selection.py  backtest_universe_compare.py  backtest_user_trades.py  diag_investor_daily.py  diag_investor_flow.py  diag_investor_trend.py  diag_volume_rank.py  migrate_tick_log_columns.py  run_walkforward.py  send_sample_cards.py  tune_exits.py
src/: __init__.py  calendar_kr.py  config.py  demo_fixtures.py  logging_setup.py  pipeline.py  rerun_decision.py  scheduler.py
tests/: conftest.py  test_afterhours_quotes.py  test_analysis.py  test_calendar_kr.py  test_candidate_trends.py  test_candidates.py  test_candle.py  test_candle_aux.py  test_config.py  (+52 more)
(+132 files in other folders)
